// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert > View danger 1`] = `
<body>
  <div>
    <div>
      <div
        class="yc-card yc-card_theme_success yc-card_view_filled yc-card_type_container yc-card_size_m yc-alert yc-s__py_4 yc-s__px_5"
      >
        <div
          class="yc-flex"
          style="column-gap: 12px; row-gap: 12px;"
        >
          <div
            class="yc-alert__icon yc-color-text yc-color-text_color_positive"
          >
            <svg
              aria-hidden="true"
              class="yc-icon"
              fill="currentColor"
              height="18"
              stroke="none"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <svg
                fill="none"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14Zm3.1-8.55a.75.75 0 1 0-1.2-.9L7.419 8.858 6.03 7.47a.75.75 0 0 0-1.06 1.06l2 2a.75.75 0 0 0 1.13-.08l3-4Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </svg>
          </div>
          <div
            class="yc-flex"
            style="flex-direction: row; flex-grow: 1; column-gap: 20px; row-gap: 20px;"
          >
            <div
              class="yc-flex yc-alert__text-content"
              style="flex-grow: 1; column-gap: 8px; row-gap: 8px;"
            >
              <div
                class="yc-flex"
                style="flex-direction: column; flex-grow: 1; column-gap: 4px; row-gap: 4px;"
              >
                <span
                  class="yc-text yc-text_variant_subheader-2 yc-alert__title"
                >
                  Success
                </span>
                Success message
              </div>
            </div>
          </div>
          <button
            class="yc-button yc-button_view_flat yc-button_size_m yc-button_pin_round-round"
            type="button"
          >
            <span
              class="yc-button__icon"
            >
              <span
                class="yc-button__icon-inner"
              >
                <svg
                  aria-hidden="true"
                  class="yc-icon yc-color-text yc-color-text_color_secondary"
                  fill="currentColor"
                  height="18"
                  stroke="none"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <svg
                    fill="none"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.47 3.47a.75.75 0 0 1 1.06 0L8 6.94l3.47-3.47a.75.75 0 1 1 1.06 1.06L9.06 8l3.47 3.47a.75.75 0 1 1-1.06 1.06L8 9.06l-3.47 3.47a.75.75 0 0 1-1.06-1.06L6.94 8 3.47 4.53a.75.75 0 0 1 0-1.06Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="yc-card yc-card_theme_warning yc-card_view_filled yc-card_type_container yc-card_size_m yc-alert yc-s__py_4 yc-s__px_5"
      >
        <div
          class="yc-flex"
          style="column-gap: 12px; row-gap: 12px;"
        >
          <div
            class="yc-alert__icon yc-color-text yc-color-text_color_warning"
          >
            <svg
              aria-hidden="true"
              class="yc-icon"
              fill="currentColor"
              height="18"
              stroke="none"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <svg
                fill="none"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.836 2.244c.962-1.665 3.366-1.665 4.328 0l4.917 8.505c.964 1.666-.239 3.751-2.164 3.751H3.083c-1.925 0-3.128-2.085-2.164-3.751l4.917-8.505ZM8 5a.75.75 0 0 1 .75.75v2a.75.75 0 1 1-1.5 0v-2A.75.75 0 0 1 8 5Zm1 5.75a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </svg>
          </div>
          <div
            class="yc-flex"
            style="flex-direction: row; flex-grow: 1; column-gap: 20px; row-gap: 20px;"
          >
            <div
              class="yc-flex yc-alert__text-content"
              style="flex-grow: 1; column-gap: 8px; row-gap: 8px;"
            >
              <div
                class="yc-flex"
                style="flex-direction: column; flex-grow: 1; column-gap: 4px; row-gap: 4px;"
              >
                <span
                  class="yc-text yc-text_variant_subheader-2 yc-alert__title"
                >
                  Warning
                </span>
                Warning message
              </div>
            </div>
          </div>
          <button
            class="yc-button yc-button_view_flat yc-button_size_m yc-button_pin_round-round"
            type="button"
          >
            <span
              class="yc-button__icon"
            >
              <span
                class="yc-button__icon-inner"
              >
                <svg
                  aria-hidden="true"
                  class="yc-icon yc-color-text yc-color-text_color_secondary"
                  fill="currentColor"
                  height="18"
                  stroke="none"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <svg
                    fill="none"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.47 3.47a.75.75 0 0 1 1.06 0L8 6.94l3.47-3.47a.75.75 0 1 1 1.06 1.06L9.06 8l3.47 3.47a.75.75 0 1 1-1.06 1.06L8 9.06l-3.47 3.47a.75.75 0 0 1-1.06-1.06L6.94 8 3.47 4.53a.75.75 0 0 1 0-1.06Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="yc-card yc-card_theme_danger yc-card_view_filled yc-card_type_container yc-card_size_m yc-alert yc-s__py_4 yc-s__px_5"
      >
        <div
          class="yc-flex"
          style="column-gap: 12px; row-gap: 12px;"
        >
          <div
            class="yc-alert__icon yc-color-text yc-color-text_color_danger"
          >
            <svg
              aria-hidden="true"
              class="yc-icon"
              fill="currentColor"
              height="18"
              stroke="none"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <svg
                fill="none"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14ZM6.53 5.47a.75.75 0 0 0-1.06 1.06L6.94 8 5.47 9.47a.75.75 0 1 0 1.06 1.06L8 9.06l1.47 1.47a.75.75 0 1 0 1.06-1.06L9.06 8l1.47-1.47a.75.75 0 1 0-1.06-1.06L8 6.94 6.53 5.47Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </svg>
          </div>
          <div
            class="yc-flex"
            style="flex-direction: row; flex-grow: 1; column-gap: 20px; row-gap: 20px;"
          >
            <div
              class="yc-flex yc-alert__text-content"
              style="flex-grow: 1; column-gap: 8px; row-gap: 8px;"
            >
              <div
                class="yc-flex"
                style="flex-direction: column; flex-grow: 1; column-gap: 4px; row-gap: 4px;"
              >
                <span
                  class="yc-text yc-text_variant_subheader-2 yc-alert__title"
                >
                  Danger
                </span>
                Danger message
              </div>
            </div>
          </div>
          <button
            class="yc-button yc-button_view_flat yc-button_size_m yc-button_pin_round-round"
            type="button"
          >
            <span
              class="yc-button__icon"
            >
              <span
                class="yc-button__icon-inner"
              >
                <svg
                  aria-hidden="true"
                  class="yc-icon yc-color-text yc-color-text_color_secondary"
                  fill="currentColor"
                  height="18"
                  stroke="none"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <svg
                    fill="none"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.47 3.47a.75.75 0 0 1 1.06 0L8 6.94l3.47-3.47a.75.75 0 1 1 1.06 1.06L9.06 8l3.47 3.47a.75.75 0 1 1-1.06 1.06L8 9.06l-3.47 3.47a.75.75 0 0 1-1.06-1.06L6.94 8 3.47 4.53a.75.75 0 0 1 0-1.06Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Alert > View success 1`] = `
<body>
  <div>
    <div>
      <div
        class="yc-card yc-card_theme_success yc-card_view_filled yc-card_type_container yc-card_size_m yc-alert yc-s__py_4 yc-s__px_5"
      >
        <div
          class="yc-flex"
          style="column-gap: 12px; row-gap: 12px;"
        >
          <div
            class="yc-alert__icon yc-color-text yc-color-text_color_positive"
          >
            <svg
              aria-hidden="true"
              class="yc-icon"
              fill="currentColor"
              height="18"
              stroke="none"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <svg
                fill="none"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14Zm3.1-8.55a.75.75 0 1 0-1.2-.9L7.419 8.858 6.03 7.47a.75.75 0 0 0-1.06 1.06l2 2a.75.75 0 0 0 1.13-.08l3-4Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </svg>
          </div>
          <div
            class="yc-flex"
            style="flex-direction: row; flex-grow: 1; column-gap: 20px; row-gap: 20px;"
          >
            <div
              class="yc-flex yc-alert__text-content"
              style="flex-grow: 1; column-gap: 8px; row-gap: 8px;"
            >
              <div
                class="yc-flex"
                style="flex-direction: column; flex-grow: 1; column-gap: 4px; row-gap: 4px;"
              >
                <span
                  class="yc-text yc-text_variant_subheader-2 yc-alert__title"
                >
                  Success
                </span>
                Success message
              </div>
            </div>
          </div>
          <button
            class="yc-button yc-button_view_flat yc-button_size_m yc-button_pin_round-round"
            type="button"
          >
            <span
              class="yc-button__icon"
            >
              <span
                class="yc-button__icon-inner"
              >
                <svg
                  aria-hidden="true"
                  class="yc-icon yc-color-text yc-color-text_color_secondary"
                  fill="currentColor"
                  height="18"
                  stroke="none"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <svg
                    fill="none"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.47 3.47a.75.75 0 0 1 1.06 0L8 6.94l3.47-3.47a.75.75 0 1 1 1.06 1.06L9.06 8l3.47 3.47a.75.75 0 1 1-1.06 1.06L8 9.06l-3.47 3.47a.75.75 0 0 1-1.06-1.06L6.94 8 3.47 4.53a.75.75 0 0 1 0-1.06Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Alert > View warning 1`] = `
<body>
  <div>
    <div>
      <div
        class="yc-card yc-card_theme_success yc-card_view_filled yc-card_type_container yc-card_size_m yc-alert yc-s__py_4 yc-s__px_5"
      >
        <div
          class="yc-flex"
          style="column-gap: 12px; row-gap: 12px;"
        >
          <div
            class="yc-alert__icon yc-color-text yc-color-text_color_positive"
          >
            <svg
              aria-hidden="true"
              class="yc-icon"
              fill="currentColor"
              height="18"
              stroke="none"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <svg
                fill="none"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14Zm3.1-8.55a.75.75 0 1 0-1.2-.9L7.419 8.858 6.03 7.47a.75.75 0 0 0-1.06 1.06l2 2a.75.75 0 0 0 1.13-.08l3-4Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </svg>
          </div>
          <div
            class="yc-flex"
            style="flex-direction: row; flex-grow: 1; column-gap: 20px; row-gap: 20px;"
          >
            <div
              class="yc-flex yc-alert__text-content"
              style="flex-grow: 1; column-gap: 8px; row-gap: 8px;"
            >
              <div
                class="yc-flex"
                style="flex-direction: column; flex-grow: 1; column-gap: 4px; row-gap: 4px;"
              >
                <span
                  class="yc-text yc-text_variant_subheader-2 yc-alert__title"
                >
                  Success
                </span>
                Success message
              </div>
            </div>
          </div>
          <button
            class="yc-button yc-button_view_flat yc-button_size_m yc-button_pin_round-round"
            type="button"
          >
            <span
              class="yc-button__icon"
            >
              <span
                class="yc-button__icon-inner"
              >
                <svg
                  aria-hidden="true"
                  class="yc-icon yc-color-text yc-color-text_color_secondary"
                  fill="currentColor"
                  height="18"
                  stroke="none"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <svg
                    fill="none"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.47 3.47a.75.75 0 0 1 1.06 0L8 6.94l3.47-3.47a.75.75 0 1 1 1.06 1.06L9.06 8l3.47 3.47a.75.75 0 1 1-1.06 1.06L8 9.06l-3.47 3.47a.75.75 0 0 1-1.06-1.06L6.94 8 3.47 4.53a.75.75 0 0 1 0-1.06Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="yc-card yc-card_theme_warning yc-card_view_filled yc-card_type_container yc-card_size_m yc-alert yc-s__py_4 yc-s__px_5"
      >
        <div
          class="yc-flex"
          style="column-gap: 12px; row-gap: 12px;"
        >
          <div
            class="yc-alert__icon yc-color-text yc-color-text_color_warning"
          >
            <svg
              aria-hidden="true"
              class="yc-icon"
              fill="currentColor"
              height="18"
              stroke="none"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <svg
                fill="none"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.836 2.244c.962-1.665 3.366-1.665 4.328 0l4.917 8.505c.964 1.666-.239 3.751-2.164 3.751H3.083c-1.925 0-3.128-2.085-2.164-3.751l4.917-8.505ZM8 5a.75.75 0 0 1 .75.75v2a.75.75 0 1 1-1.5 0v-2A.75.75 0 0 1 8 5Zm1 5.75a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </svg>
          </div>
          <div
            class="yc-flex"
            style="flex-direction: row; flex-grow: 1; column-gap: 20px; row-gap: 20px;"
          >
            <div
              class="yc-flex yc-alert__text-content"
              style="flex-grow: 1; column-gap: 8px; row-gap: 8px;"
            >
              <div
                class="yc-flex"
                style="flex-direction: column; flex-grow: 1; column-gap: 4px; row-gap: 4px;"
              >
                <span
                  class="yc-text yc-text_variant_subheader-2 yc-alert__title"
                >
                  Warning
                </span>
                Warning message
              </div>
            </div>
          </div>
          <button
            class="yc-button yc-button_view_flat yc-button_size_m yc-button_pin_round-round"
            type="button"
          >
            <span
              class="yc-button__icon"
            >
              <span
                class="yc-button__icon-inner"
              >
                <svg
                  aria-hidden="true"
                  class="yc-icon yc-color-text yc-color-text_color_secondary"
                  fill="currentColor"
                  height="18"
                  stroke="none"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <svg
                    fill="none"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.47 3.47a.75.75 0 0 1 1.06 0L8 6.94l3.47-3.47a.75.75 0 1 1 1.06 1.06L9.06 8l3.47 3.47a.75.75 0 1 1-1.06 1.06L8 9.06l-3.47 3.47a.75.75 0 0 1-1.06-1.06L6.94 8 3.47 4.53a.75.75 0 0 1 0-1.06Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
